# mcp-platform

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS_LICENSE.md  HARDWARE_LICENSE.md  LICENSE  NOTICE  Pclika_MCP_Ready_Kit_Spec.md  README.md  SECURITY.md  SUPPORT.md  TRADEMARKS.md  logo.ai
.github/: pull_request_template.md
b2b/: inquiry-questionnaire.md  nda-template.md  quote-template.md  service-sop.md
brand/: BRAND_GUIDE.md  ORIGIN_CODEX.md  blog-post-01.md  brand-handbook.md  demo-video-script.md  social-media-strategy.md
bridge/: README.md  server-instructions.md
bridge/mcp-server/: README.md  pyproject.toml
bridge/mcp-server/pclika_bridge/: __init__.py  __main__.py  exceptions.py  protocol.py  server.py  setup_cmd.py  transport.py
bridge/mcp-server/pclika_bridge/tools/: __init__.py  button_read.py  device_info.py  display_text.py  firmware_version.py  gpio.py  led_control.py  sensor_read.py  serial_log_read.py  servo_move.py  wifi_scan.py
docs/: README.md  api-reference.md  quickstart.md  troubleshooting.md
examples/: README.md
firmware/: README.md
firmware/esp-idf/components/pclika_runtime/: CMakeLists.txt  pclika_bh1750.c  pclika_bme280.c  pclika_display.c  pclika_gpio.c  pclika_logging.c  pclika_mpu6050.c  pclika_sensor.c  pclika_servo.c  pclika_sht31.c  pclika_ssd1306.c  pclika_st7789.c  pclika_system.c  pclika_vl53l0x.c  pclika_wifi.c
firmware/esp-idf/components/pclika_runtime/include/: pclika_bh1750.h  pclika_bme280.h  pclika_display.h  pclika_gpio.h  pclika_logging.h  pclika_mpu6050.h  pclika_sensor.h  pclika_servo.h  pclika_sht31.h  pclika_ssd1306.h  pclika_st7789.h  pclika_system.h  pclika_vl53l0x.h  pclika_wifi.h
hc-server/: Dockerfile  README.md  (+6 more)
(+228 files in other folders)
