[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pclika-bridge"
version = "0.1.0"
description = "MCP bridge server connecting AI coding tools to Pclika hardware platforms"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["mcp", "embedded", "esp32", "iot", "hardware", "claude", "codex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Embedded Systems",
]
dependencies = [
    "pyserial>=3.5",
    "anyio>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
pclika-bridge = "pclika_bridge.__main__:main"
pclika-setup  = "pclika_bridge.setup_cmd:setup_main"

[project.urls]
Homepage = "https://pclika.com"
Repository = "https://github.com/Pclika/mcp-platform"
Documentation = "https://pclika.com/docs"

[tool.hat